Migrate variant model to rely on svart library. Remove AbstractVariantCoordinates Remove Chromosome Remove ConfidenceInterval Remove VariantAllele Remove VariantRecord Remove VariantType Update tests in core to reduce verbosity.